	* Breaking API so that we now hide internal data structures.

2008-02-06 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Rewrote Peter Hartley's patch to include a new extra header field in
	FileInfo.

*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	Using UpnpReadHttpGet to download large files causes the application to
	crash. This happens when the file being downloaded exceeds the device
	memory - entirely possible when transferring video files.
	The programmatic cause is that the logic implemented in the function
	http_ReadHttpGet (which UpnpReadHttpGet calls) reads the entire file
	into memory. The fix modifies the existing logic to discard data after
	it's been read; there's no reason to keep it around since the caller
	of UpnpReadHttpGet already has a copy of it.
	
	This issue exists in 1.6.6 as well as the latest sources.

	Patch submitted by Chandra (inactiveneurons).

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	In the latest sources, http_RequestAndResponse and other methods that
	use connect() are broken. More specifically, connect() in these methods
	is returning with an EINVAL. The programatic cause is that the address_len
	argument passed to connect() is different in IPV4 vs IPV6 (as described in:
	http://www.opengroup.org/onlinepubs/009695399/functions/connect.html).
	The current code always uses the IPV6 size. The fix modifies each use of
	connect() to use the correct size based on the address family being used.

	Patch submitted by Chandra (inactiveneurons).

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	Fix compilation error in upnp/src/gena/gena_ctrlpt.c (this is most
	likely an error on all platforms).

	Patch submitted by Chandra (inactiveneurons).

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>